# FOHMediaShow

./: .clang-format  .clang-tidy  .gitignore  .gitlab-ci.yml  CMakeLists.txt  FOHMediaShow.desktop.in  app_icon.rc  resources.qrc
.github/workflows/: build-macos.yml  build.yml
Media/: logo0.xcf
inc/: AppContext.h  Arrangement.h  ArrangementDropZone.h  ArrangementViewModel.h  DisplayEngine.h  DraggableComponentBtn.h  FlowLayout.h  LayoutEditorViewModel.h  Library.h  LyricsEditorViewModel.h  MediaViewModel.h  ProPresenterImporter.h  ResizableRectItem.h  ScreenModel.h  SettingsManager.h  ShortcutManager.h  Show.h  ShowSerializer.h  ShowViewModel.h  Slide.h  SlideDeck.h  SlideDeckViewModel.h  SlideLayout.h  ThemeManager.h  TimerManager.h
program_files/: AllIAm.json  EveryHour.json  HoneyInTheRock.fohd  HoneyInTheRock.json  JesusDrawMeClose.json  ShowExample.fohs  ShowExample.yaml  slides.fohm  slides2.fohm
qml/: DisplaysView.qml  LayoutEditorView.qml  LiveOutputWindow.qml  LyricsEditorView.qml  Main.qml  MediaPickerDialog.qml  MediaView.qml  ResizableCanvasItem.qml  ServicesView.qml  SettingsView.qml  SlidePreview.qml  TimerControlCard.qml
scripts/linux/: install_linux_desktop.sh
src/: AppContext.cpp  Arrangement.cpp  ArrangementViewModel.cpp  DisplayEngine.cpp  FlowLayout.cpp  LayoutEditorViewModel.cpp  Library.cpp  LyricsEditorViewModel.cpp  MediaViewModel.cpp  ProPresenterImporter.cpp  ResizableRectItem.cpp  ScreenModel.cpp  SettingsManager.cpp  ShortcutManager.cpp  Show.cpp  ShowSerializer.cpp  ShowViewModel.cpp  Slide.cpp  SlideDeck.cpp  SlideDeckViewModel.cpp  SlideLayout.cpp  ThemeManager.cpp  TimerManager.cpp  main.cpp
tests/: GUITests.cpp
